# kms-message

./: CMakeLists.txt  README.rst
src/: b64.c  b64.h  kms_crypto.c  kms_crypto.h  kms_crypto_windows.c  kms_decrypt_request.c  kms_encrypt_request.c  kms_kv_list.c  kms_kv_list.h  kms_message.c  kms_message.h  kms_message_private.h  kms_port.h  kms_private.h  kms_request.c  kms_request.h  kms_request_opt.c  kms_request_str.c  kms_request_str.h  kms_response.c  kms_response_parser.c  sort.c
src/kms_message/: kms_b64.h  kms_decrypt_request.h  kms_encrypt_request.h  kms_message.h  kms_message_defines.h  kms_request.h  kms_request_opt.h  kms_request_str.h  kms_response.h  kms_response_parser.h
test/: host_test.sreq  test_kms.c  test_kms_request.c
test/decrypt/: decrypt.creq  decrypt.sreq
